added more changes to README and man source files

--- a/assignments/assignment3/README
+++ b/assignments/assignment3/README
@@ -14,6 +14,8 @@ Included files:
     * tandc.c
     * Makefile
     * README
+    * client.1
+    * server.1
     * server.pdf
     * client.pdf
 
@@ -45,6 +47,10 @@ About files:
             client with the job number, as well as a summary after the server exits after 30s of inactivity
     * tands.c: 
         * The file containing the Sleep() and Trans() functions required for assignment 3
+    * client.1:
+        * The source file for the generated man page client.pdf
+    * server.1:
+        * The source file for the generated man page server.pdf 
     * server.pdf: 
         * The groff-generated man page for the server.cpp file
     * client.pdf:
